[package]
name = "zond"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = "0.11"
clap = "4.0"
extract-frontmatter = "4.1"
once_cell = "1.16"
ron = "0.8"
serde = "1.0"
url = "2.2"
walkdir = "2.3"
xml-rs = "0.8"

[dependencies.chrono]
version = "0.4"
features = ["std"]

[profile.release]
codegen-units = 1
strip = true
lto = true
