[package]
name = "zond"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = "0.12"
extract-frontmatter = "4.1"
ron = "0.8"
serde = "1.0"
tinyrand = "0.5"
tinyrand-std = "0.5"
url = "2.2"
walkdir = "2.3"
xml-rs = "0.8"

[features]
bootstrap = ["package-bootstrap", "pulldown-cmark"]

[[bin]]
name = "zond"
path = "src/zond.rs"

[[bin]]
name = "bootstrap"
path = "src/bootstrap.rs"
required-features = ["bootstrap"]

[dependencies.chrono]
version = "0.4"
features = ["std"]

[dependencies.clap]
version = "4.0"
features = ["color"]

[dependencies.gettextrs]
package = "gettext-rs"
version = "0.7"
features = ["gettext-system"]

[dependencies.package-bootstrap]
version = "0.3"
features = ["mangen"]
optional = true

[dependencies.pulldown-cmark]
version = "0.9"
optional = true

[dependencies.tinylog]
package = "tinylog-gmi"
version = "0.1"

[profile.release]
codegen-units = 1
strip = true
lto = true
